Add some boilerplate to get started

--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = { version = "1.0.100", features = ["backtrace"] }
+thiserror = "2.0.17"
+clacks-macros = { path = "../clacks-macros" }
+chrono = "0.4.42"
+log = "0.4.28"
