--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -16,3 +16,7 @@ http = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 prometheus = "0.14.0"
+axum = "0.8.7"
+include_dir = "0.7.4"
+tower = { version = "0.5.2", features = ["full"] }
+tower-http = { version = "0.6.6", features = ["full"] }
