--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -20,3 +20,4 @@ axum = "0.8.7"
 include_dir = "0.7.4"
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["full"] }
+lazy_static = "1.5.0"
