--- a/clacks-backend/src/adapters/testdata/config.toml
+++ b/clacks-backend/src/adapters/testdata/config.toml
@@ -1,3 +1,8 @@
 address = "0.0.0.0:8080"
 queue_size = 10
 environment = "development"
+
+[timing]
+show_character_for = 1
+pause_between_characters_for = 2
+pause_between_messages_for = 3
