--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -16,8 +16,10 @@ http = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 prometheus = "0.14.0"
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["ws"] }
 include_dir = "0.7.4"
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["full"] }
 lazy_static = "1.5.0"
+serde_json = "1.0.145"
+futures-util = "0.3.31"
