--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -23,3 +23,4 @@ tower-http = { version = "0.6.6", features = ["full"] }
 lazy_static = "1.5.0"
 serde_json = "1.0.145"
 futures-util = "0.3.31"
+rand = "0.9.2"
