--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -3,6 +3,10 @@ name = "clacks-backend"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+raspberry_pi = []
+serve_frontend = []
+
 [dependencies]
 anyhow = { version = "1.0.100", features = ["backtrace"] }
 thiserror = "2.0.17"
@@ -20,7 +24,6 @@ axum = { version = "0.8.7", features = ["ws"] }
 include_dir = "0.7.4"
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["full"] }
-lazy_static = "1.5.0"
 serde_json = "1.0.145"
 futures-util = "0.3.31"
 rand = "0.9.2"
