Implement servo control

--- a/clacks-backend/Makefile
+++ b/clacks-backend/Makefile
@@ -16,6 +16,8 @@ test-verbose:
 clippy:
 	cargo clippy -- -D warnings
 	cargo clippy --tests -- -D warnings
+	cargo clippy --features raspberry_pi -- -D warnings
+	cargo clippy --features raspberry_pi --tests -- -D warnings
 
 .PHONY: fmt
 fmt:
@@ -27,6 +29,10 @@ fix:
 	cargo clippy --fix --allow-staged
 	cargo fix --tests --allow-staged
 	cargo clippy --tests --fix --allow-staged
+	cargo fix --features raspberry_pi --allow-staged
+	cargo clippy --features raspberry_pi --fix --allow-staged
+	cargo fix --features raspberry_pi --tests --allow-staged
+	cargo clippy --features raspberry_pi  --tests --fix --allow-staged
 	cargo fmt
 
 .PHONY: check-repository-unchanged
