--- a/clacks-backend/Cargo.toml
+++ b/clacks-backend/Cargo.toml
@@ -27,3 +27,4 @@ tower-http = { version = "0.6.6", features = ["full"] }
 serde_json = "1.0.145"
 futures-util = "0.3.31"
 rand = "0.9.2"
+rppal = "0.22.1"
